# jinx

./: README.md  np_implementation.py  parsing.py  primitives.py  pyproject.toml  shell.py  test_word_evaluation.py  test_word_formation.py  test_word_spelling.py  vocabulary.py  word_evaluation.py  word_formation.py  word_spell.py  word_spelling.py
.github/workflows/: ci.yaml
src/jinx/: errors.py  np_implementation.py  primitives.py  shell.py  vocabulary.py  word_evaluation.py  word_formation.py  word_spelling.py
src/jinx/execution/: README.md  adverbs.py  application.py  conjunctions.py  conversion.py  executor.py  helpers.py  primitives.py  printing.py  verbs.py
src/jinx/execution/jax/: adverbs.py  application.py
src/jinx/execution/numpy/: __init__.py  adverbs.py  application.py  conjunctions.py  conversion.py  helpers.py  primitives.py  printing.py  verbs.py
tests/: test_np_implementation.py  test_word_evaluation.py  test_word_formation.py  test_word_spelling.py
tests/execution/: test_application.py  test_helpers.py  test_primitives.py  test_printing.py
tests/execution/numpy/: test_application.py  test_helpers.py  test_primitives.py  test_printing.py
