[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jjinx"
version = "0.0.1"
description = "Interpreter for a subset of the J language."
readme = "README.md"
authors = [{ name = "Alex Riley" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["J", "interpreter"]
dependencies = [
    "numpy >= 2.1.3",
    "numba >= 0.61.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/ajcr/jinx"

[project.scripts]
jinx = "jinx.shell:main"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]